Convert to diesel and construct common migrations, models, and schema

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ license = "MIT"
 
 [dependencies]
 kankyo = "0.2.0"
-env_logger = "0.5"
 log = "0.4"
+pretty_env_logger = "0.2"
 threadpool = "1.7"
-reql = "0.0.16"
 futures = "0.2"
+chrono = "0.4"
+diesel = { version = "1.0.0", features = ["postgres"] }
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity.git"
