--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ pretty_env_logger = "0.2"
 threadpool = "1.7"
 futures = "0.2"
 chrono = "0.4"
-diesel = { version = "1.0.0", features = ["postgres"] }
+diesel = { version = "1.0.0", features = ["postgres", "chrono", "serde_json"] }
 
 [dependencies.serenity]
 git = "https://github.com/serenity-rs/serenity.git"
