--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,22 @@ kankyo = "0.2.0"
 log = "0.4"
 pretty_env_logger = "0.2"
 threadpool = "1.7"
-futures = "0.2"
+futures = "0.1"
 chrono = "0.4"
 typemap = "0.3"
 sys-info = "*"
 procinfo = "0.4.2"
+rand = "0.5.2"
+regex = "1"
+reqwest = "0.8"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dependencies.diesel]
 version = "1.0.0"
 features = ["postgres", "chrono"]
 
 [dependencies.serenity]
-git = "https://github.com/serenity-rs/serenity.git"
+git = "https://github.com/Mishio595/serenity.git"
 features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils", "voice"]
