--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ threadpool = "1.7"
 futures = "0.1"
 chrono = "0.4"
 typemap = "0.3"
+sysinfo = "0.5"
 sys-info = "*"
-procinfo = "0.4.2"
 rand = "0.5.2"
 regex = "1"
 reqwest = "0.8"
