--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,13 @@ typemap = "0.3"
 sysinfo = "0.5"
 sys-info = "*"
 rand = "0.5.2"
-regex = "1"
+regex = "*"
 reqwest = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+lazy_static = "1.0.1"
+levenshtein = "1.0.3"
 
 [dependencies.diesel]
 version = "1.0.0"
