--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,13 @@ serde_derive = "1.0"
 serde_json = "1.0"
 lazy_static = "1.0.1"
 levenshtein = "1.0.3"
+fuzzy_match = "0.1.1"
 
 [dependencies.diesel]
 version = "1.0.0"
 features = ["postgres", "chrono"]
 
 [dependencies.serenity]
-git = "https://github.com/Mishio595/serenity.git"
-#path = "/home/lynn/builds/serenity"
+#git = "https://github.com/Mishio595/serenity.git"
+path = "/home/lynn/builds/serenity"
 features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils", "voice"]
