--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ serde_json = "1.0"
 lazy_static = "1.0.1"
 levenshtein = "1.0.3"
 fuzzy_match = "0.1.1"
+forecast = "1.1.0"
+geocoding = "0.0.3"
 
 [dependencies.diesel]
 version = "1.0.0"
