More improvements including a fix to presence_update and the entire DB system

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ kankyo = "0.2.0"
 log = "0.4"
 pretty_env_logger = "0.2"
 threadpool = "1.7"
-futures = "0.1"
 chrono = "0.4"
 typemap = "0.3"
 sysinfo = "0.5"
@@ -32,6 +31,8 @@ fuzzy_match = "0.1.1"
 forecast = "1.1.0"
 geocoding = "0.0.3"
 kitsu = "0.2.0"
+r2d2 = "0.8.2"
+r2d2-diesel = "1.0.0"
 
 [dependencies.diesel]
 version = "1.0.0"
