--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "momiji"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Mishio595 <tenseiken595@gmail.com>"]
 license = "MIT AND ISC"
 repository = "https://gitlab.com/Mishio595/momiji-rust"
@@ -48,7 +48,7 @@ version = "0.5"
 features = ["colored"]
 
 [dependencies.serenity]
-#git = "https://github.com/Mishio595/serenity.git"
-path = "/home/lynn/builds/serenity"
+git = "https://github.com/Mishio595/serenity.git"
+#path = "/home/lynn/builds/serenity"
 default-features = false
 features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils", "voice"]
