--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ sys-info = "*"
 sysinfo = "0.5"
 threadpool = "1.7"
 typemap = "0.3"
+urbandictionary = "0.3"
 
 [dependencies.parking_lot]
 version = "0.6"
