--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "momiji"
-version = "1.3.0"
-authors = ["Mishio595 <tenseiken595@gmail.com>"]
-license = "MIT AND ISC"
+version = "3.0.0"
+authors = ["Adelyn Breedlove <tenseiken595@gmail.com>"]
+license = "MIT"
 repository = "https://gitlab.com/Mishio595/momiji-rust"
 readme = "./README.md"
+edition = "2018"
 
 [profile.dev]
 opt-level = 0
@@ -13,44 +14,30 @@ opt-level = 0
 opt-level = 3
 
 [dependencies]
+async-trait = "0.1"
 chrono = "0.4"
-forecast = "1.1.0"
-fuzzy_match = "0.1.1"
-geocoding = "0.0.3"
-kankyo = "0.2.0"
-kitsu = "0.2.0"
-lazy_static = "1.0.1"
-levenshtein = "1.0.3"
-log = "0.4"
-rand = "0.5.2"
-regex = "*"
-reqwest = "0.8"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-sys-info = "*"
-sysinfo = "0.5"
-threadpool = "1.7"
-typemap = "0.3"
-urbandictionary = "0.3"
-
-[dependencies.parking_lot]
-version = "0.6"
-features = ["deadlock_detection"]
+futures = "0.3"
+fuzzy_match = "0.2.1"
+kankyo = "0.3.0"
+lazy_static = "1.4.0"
+parking_lot = "0.11.1"
+peg = "0.7"
+regex = "1.5.3"
+tracing = "0.1.26"
+tracing-subscriber = "0.2.0"
+twilight-cache-inmemory = "0.4"
+twilight-embed-builder = "0.4"
+twilight-gateway = "0.4"
+twilight-http = "0.4"
+twilight-mention = "0.4"
+twilight-model = "0.4"
+twilight-standby = "0.4"
+twilight-util = "0.4"
 
 [dependencies.diesel]
-version = "1.0.0"
+version = "1.4"
 features = ["postgres", "chrono", "r2d2"]
 
-[dependencies.fern]
-version = "0.5"
-features = ["colored"]
-
-[dependencies.serenity]
-git = "https://github.com/Mishio595/serenity.git"
-#path = "/home/adelyn/dev/serenity"
-default-features = false
-features = ["builder", "client", "cache", "framework", "standard_framework", "gateway", "http", "model", "utils"]
-
-[patch.crates-io]
-openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
+[dependencies.tokio]
+version = "1.6"
+features = ["rt-multi-thread", "macros"]
