--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures = "0.3"
 fuzzy_match = "0.2.1"
 kankyo = "0.3.0"
 lazy_static = "1.4.0"
+levenshtein = "1.0.5"
 parking_lot = "0.11.1"
 peg = "0.7"
 regex = "1.5.3"
