feature: my personal color changing roles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ lazy_static = "1.4.0"
 levenshtein = "1.0.5"
 parking_lot = "0.11.1"
 peg = "0.7"
+rand = "0.8.4"
 regex = "1.5.3"
 tracing = "0.1.26"
 tracing-subscriber = "0.2.0"
