--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ parking_lot = "0.11.1"
 peg = "0.7"
 rand = "0.8.4"
 regex = "1.5.3"
+sysinfo = "0.18"
 tracing = "0.1.26"
 tracing-subscriber = "0.2.0"
 twilight-cache-inmemory = "0.4"
